# packages/contracts/openapi/openapi.json
@@ -902,6 +902,11 @@
       "AuthenticatedResponse": {
         "type": "object",
         "properties": {
+          "ownerId": {
+            "type": "string",
+            "format": "uuid",
+            "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+          },
           "displayName": {
             "type": "string"
           },
@@ -924,6 +929,7 @@
           }
         },
         "required": [
+          "ownerId",
           "displayName",
           "csrfToken",
           "sessionExpiresAt"
@@ -938,6 +944,11 @@
           },
           "authenticated": {
             "type": "boolean"
+          },
+          "ownerId": {
+            "type": "string",
+            "format": "uuid",
+            "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
           },
           "displayName": {
             "type": "string"
